# Q3Solver

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  Makefile  QMesh.pro  README.md  additemdirector.cpp  additemdirector.h  additemdirectorstate.h  additemdirectorstateitemadd.cpp  additemdirectorstateitemadd.h  additemdirectorstateitemselect.cpp  additemwidget.cpp  additemwidget.h  ani2dmeshgenerator.cpp  itemlistmodel.cpp  itemlistmodel.h  lineadditemwidget.cpp  lineadditemwidget.h  lineadditemwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshgenerator.h  pointadditemwidget.cpp  pointadditemwidget.h  pointadditemwidget.ui  qani2d.cpp  qani2d.h  qmesh.cpp  qmesh.h  qmesh.ui  qmeshitem.cpp  qmeshitem.h  qmeshitemline.cpp  qmeshitemline.h  qmeshitempoint.cpp  qmeshitempoint.h  (+14 more)
patch/: ani2d_0001.patch
source/: CMakeLists.txt  additemdirector.cpp  additemdirector.h  additemdirectorstate.cpp  additemdirectorstateitemadd.cpp  additemdirectorstateitemselect.cpp  additemdirectorstateitemselect.h  additemwidget.cpp  additemwidget.h  ani2dmeshgenerator.cpp  ani2dmeshgenerator.h  lineadditemwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshgenerator.cpp  pointadditemwidget.ui  q3solver.cpp  q3solver.h  q3solver.ui  qani2d.cpp  qani2d.h  qmesh.cpp  qmesh.ui  qmeshitem.h  qmeshitemline.cpp  qmeshitemline.h  qmeshitempoint.cpp  qmeshitempoint.h  qmeshplot.cpp  qmeshplot.h  segmentadditemwidget.cpp
source/q3algorithms/: CMakeLists.txt  bicgstablinearsolver.cpp  bicgstablinearsolver.h  linearoperator.cpp  linearoperator.h  preconditioner.cpp  preconditioner.h  q3vector.cpp  q3vector.h
source/q3ani2d/: CMakeLists.txt  q3ani2d.cpp  q3ani2d.h  q3ani2dmeshadapter.cpp  q3ani2dmeshadapter.h
source/q3boundary/: CMakeLists.txt  exprtk.h  q3boundary.cpp  q3boundary.h  q3boundaryfixedvelocity.cpp  q3boundaryfixedvelocity.h  q3boundaryfixedvelocity.ui  q3boundaryin.cpp  q3boundaryin.h  q3boundaryin.ui  q3boundarynoslip.cpp  q3boundarynoslip.h  q3boundarynoslip.ui  q3boundaryout.cpp  q3boundaryout.h  q3boundaryout.ui  q3boundarytype.cpp  q3boundarytype.h  q3xyexpression.cpp  q3xyexpression.h
source/q3calc/: CMakeLists.txt  conjugategradient.cpp  conjugategradient.h  q3calc.cpp  q3calc.h
source/q3director/: CMakeLists.txt  q3additemdirector.cpp  q3additemdirector.h  q3additemdirector.ui  q3director.cpp  q3director.h  q3directormanager.cpp  q3directormanager.h  q3movedirector.cpp  q3movedirector.h  q3resizedirector.cpp  q3resizedirector.h  q3selectdirector.cpp  q3selectdirector.h  q3selectdirector.ui
source/q3graph/: CMakeLists.txt  q3contour.cpp  q3contour.h  q3contourdirector.cpp  q3contourdirector.h  q3contoursettingswidget.cpp  q3contoursettingswidget.h  q3contoursettingswidget.ui  q3externalplot.cpp  q3externalplot.h  q3externalplot.ui  q3graphs.cpp  q3graphs.h  q3vxbyysettingswidget.cpp  q3vxbyysettingswidget.h  q3vxbyysettingswidget.ui  q3vybyxsettingswidget.cpp  q3vybyxsettingswidget.h  q3vybyxsettingswidget.ui
source/q3interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.h  naturalneigbourinterpolation.cpp  naturalneigbourinterpolation.h  q3interpolation.cpp  q3interpolation.h  q3meshinterpolation.cpp  q3meshinterpolation.h  q3naturalneigbourinterpolation.cpp  q3naturalneigbourinterpolation.h
source/q3main/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  q3boundaryeditor.cpp  q3boundaryeditor.h  q3boundaryeditor.ui  q3calculuseditor.cpp  q3calculuseditor.h  q3calculuseditor.ui  q3contoursettingswidget.ui  q3externalplot.cpp  q3externalplot.h  q3externalplot.ui  q3mesheditor.cpp  q3mesheditor.h  q3mesheditor.ui  q3plotsettingswidget.cpp  q3plotsettingswidget.h  q3pointinfodirector.cpp  q3pointinfodirector.h  q3sceletoneditor.cpp  q3sceletoneditor.h  q3sceletoneditor.ui  q3solver.cpp  q3solver.h  q3solver.ui  q3testbuilder.cpp  q3testbuilder.h
source/q3mesh/: CMakeLists.txt  q3contour.cpp  q3contour.h  q3contoursettingswidget.cpp  q3contoursettingswidget.h  q3mesh.cpp  q3mesh.h  q3meshadapter.cpp  q3meshadapter.h  q3meshedge.cpp  q3meshedge.h  q3meshlaplacestreamoperator.cpp  q3meshlaplacestreamoperator.h  q3meshneumannoperator.cpp  q3meshneumannoperator.h  q3meshnode.cpp  q3meshnode.h  q3meshtriangle.cpp  q3meshtriangle.h  q3meshtrinodeinterpolation.cpp  q3meshtrinodeinterpolation.h  q3streamplot.cpp  q3streamplot.h
source/q3mesh_builder/: CMakeLists.txt  q3additemdirector.cpp  q3additemdirector.h  q3additemdirector.ui  q3ani2d.cpp  q3ani2d.h  q3circle.cpp  q3circle.h  q3circleform.cpp  q3circleform.ui  q3director.cpp  q3director.h  q3directormanager.h  q3itemvisitor.cpp  q3itemvisitor.h  q3mesh.cpp  q3mesh.h  q3meshadapter.cpp  q3meshadapter.h  q3meshbuilder.cpp  q3meshbuilder.h  q3meshbuilder.ui  q3movedirector.cpp  q3movedirector.h  q3painter.cpp  q3painter.h  q3plot.cpp  q3plot.h  q3plotdrawable.cpp  q3plotdrawable.h  q3point.cpp  q3point.h  q3pointconnection.cpp  q3pointconnection.h  q3pointconnectionform.cpp  q3pointconnectionform.ui  q3pointform.cpp  q3pointform.ui  q3resizedirector.cpp  q3resizedirector.h  (+7 more)
source/q3plot/: CMakeLists.txt  q3painter.cpp  q3painter.h  q3plot.cpp  q3plot.h  q3plotdrawable.h
source/q3sceleton/: CMakeLists.txt  q3circle.cpp  q3circle.h  q3circleform.h  q3circleform.ui  q3itemvisitor.cpp  q3itemvisitor.h  q3point.cpp  q3point.h  q3pointconnection.cpp  q3pointconnection.h  q3pointconnectionform.h  q3pointconnectionform.ui  q3pointform.h  q3pointform.ui  q3sceleton.cpp  q3sceleton.h  q3sceletonitem.cpp  q3sceletonitem.h  q3sceletonitemdelegate.cpp  q3sceletonitemdelegate.h  q3sceletonitemform.cpp  q3sceletonitemform.h
source/q3test/: CMakeLists.txt  q3ani2dtest.cpp  q3ani2dtest.h  q3bicgtest.cpp  q3bicgtest.h  q3calctest.cpp  q3calctest.h  q3qcustomplottest.cpp
